<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffedcc"
    tools:context=".ZoneActivity">

    <TextView
        android:id="@+id/Location"
        android:layout_width="194dp"
        android:layout_height="36dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/location"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/placeName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="41dp"
        android:background="#ffff"
        android:text="@string/soil_type"
        app:layout_constraintEnd_toStartOf="@+id/spinner2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="48dp"
        android:background="#ffff"
        app:layout_constraintEnd_toStartOf="@+id/spinner3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="79dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:text="@string/zone_3"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location"
        tools:text="Zone 3" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        android:background="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/MoistureLevel1"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="41dp"
        android:background="#ffff"
        app:layout_constraintEnd_toStartOf="@+id/MoistureLevel3"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/MoistureLevel2"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:background="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <Spinner
        android:id="@+id/MoistureLevel3"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:background="#ffff"
        app:layout_constraintEnd_toStartOf="@+id/MoistureLevel2"
        app:layout_constraintTop_toBottomOf="@+id/spinner2">

    </Spinner>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="46dp"
        android:text="@string/zone_1"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="Zone 1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="14dp"
        android:text="@string/zones"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Zones" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="43dp"
        android:text="@string/zone_2"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/Location"
        tools:text="Zone 2" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="289dp"
        android:layout_marginBottom="46dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoistureLevel3" />

</android.support.constraint.ConstraintLayout>