<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffedcc">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


<!--        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ip_address"
            android:id="@+id/textView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_g_192_168_0_10"
            android:id="@+id/editTextIPAddress"
            android:inputType=""
            android:importantForAutofill="no" tools:targetApi="o"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_number"
            android:id="@+id/textView2" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/e_g_80"
            android:id="@+id/editTextPortNumber"
            android:importantForAutofill="no" tools:targetApi="o"/> -->

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zip_code" />

        <EditText
            android:id="@+id/editTextZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_g_53233"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:targetApi="o" />

        <Button
            android:id="@+id/buttonSetup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1.0"
            android:background="@android:color/holo_orange_light"
            android:text="@string/setup"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>